# Python-tips-tools

./: .gitignore  404.html  README.md  README_template.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: documentation.yml  publish_pypi.yml  tests.yml
docs/: mkdocs.yml
docs/scripts/: gen_ref_nav.py
examples/: 1-vector-library copy.ipynb  1-vector.ipynb  2-linear-map.ipynb  2-lineartransform-library.ipynb  3-exceptions.ipynb  3-mutable-objects.ipynb  4-exceptions.ipynb  4-jit-compiler.ipynb  5-jit-compiler.ipynb  5-memory-addresses.ipynb  6-scripting.py  7-timing.py  8-profiling.py  example.ipynb
examples/1-vector/: index.html
examples/2-linear-map/: 2-linear-map.ipynb  index.html
examples/3-mutable-objects/: index.html
examples/4-exceptions/: 4-exceptions.ipynb  index.html
examples/5-jit-compiler/: index.html
examples/scripts/: example_script.py
examples/work in progress/: 10-pytho-internals.ipynb  9-generators.ipynb
my_library/: __init__.py  vector.py
my_library/linear_transform/: __init__.py  transform.py
my_library/lineartransform/: __init__.py  transform.py
my_library/vector/: __init__.py  vector.py
mylibrary/: __init__.py
mylibrary/linearmap/: __init__.py  linear_map.py
mylibrary/vector/: __init__.py  vector.py
mypackage/: __init__.py  __main__.py  _version.py
mypackage/linearmap/: __init__.py  linear_map.py
mypackage/vector/: vector.py
reference/: SUMMARY.txt  index.html  index.md
reference/_version/: _version.md  index.html
reference/linearmap/: index.html  index.md
reference/linearmap/linear_map/: index.html  linear_map.md
reference/vector/: index.html  index.md
reference/vector/vector/: index.html  vector.md
scripts/gen_ref_nav/: gen_ref_nav.py  index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_linear_map.py  test_linear_transform.py  test_vector.py
